# FaxMeMaybe

./: .gitignore  README.md  TODO.md
.github/workflows/: build-client-on-push.yml  build-server-on-push.yml
fax-me-maybe-client/: .env.example  Dockerfile  docker-compose.yml  first_blood_receipt.py  main.py  pyproject.toml
fax-me-maybe-server/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  worker-configuration.d.ts  wrangler.json
fax-me-maybe-server/migrations/: 0001_todoist_integration.sql
fax-me-maybe-server/src/components/ui/: label-selector.tsx  pagination.tsx  smart-date-input.tsx
fax-me-maybe-server/src/react-app/: AdminDashboard.tsx  App.tsx  FirstBloodReceipt.tsx  TodoTicket.tsx  ViewTodo.tsx  index.css  main.tsx
fax-me-maybe-server/src/worker/: api.types.ts  index.ts  rate-limit.ts
fax-me-maybe-server/src/worker/services/: todoist.ts
